--- a/sotsugyoseisaku/index.html
+++ b/sotsugyoseisaku/index.html
@@ -13,7 +13,7 @@
 <body>
   <nav class="white" role="navigation">
     <div class="nav-wrapper container">
-      <a id="logo-container" href="#" class="brand-logo">Find-Stylist</a>
+      <a id="logo-container" href="#" class="brand-logo"><img src="1_Primary_logo_on_transparent_218x69.png"></a>
       <ul class="right hide-on-med-and-down">
         <li><a href="#">Navbar Link</a></li>
       </ul>
@@ -29,24 +29,29 @@
     <div class="section no-pad-bot">
       <div class="container">
         <br><br>
-        <h1 class="header center teal-text text-lighten-2">Find Your Stylist</h1>
+        <h1 class="header center teal-text text-lighten-2"></h1>
         <div class="row center">
           <h5 class="header col s12 light">見つかる、私のスタイリスト</h5>
         </div>
-        
-    <div class="container">  
+  
+  <form method="post" action="search.php">
+  <div class="container">  
   <div class="row">
     <div class="input-field s6">      
-      <select class="validate">
+      <select class="validate" name="prefecture">
         <option value="" disabled selected>地域で検索</option>
-        <option value="1">東京</option>
-        <option value="2">関西</option>
-        <option value="3">その他</option>
+        <option value="東京">東京</option>
+        <option value="関西">神奈川</option>
+        <option value="その他">その他</option>
       </select>
       <label ></label>
     </div>
   </div>
+  
+    <input id="submit_button" type="submit" name="submit" value="さがす">
+      
 </div>
+</form>
    
     <!--  Scripts-->
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
